Fix: changing color of links when hovered in nav bar to be lighter and still readable.

--- a/client/css/ibm-joe.scss
+++ b/client/css/ibm-joe.scss
@@ -78,3 +78,8 @@ display: none;
 /*.ibm-list-group-item-disabled {
 opacity: 0.5;
 }*/
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #ddd;
+  background-color: transparent;
+}
